standards/gnds-2.0/test/c/src/v2.0/transport/OrphanProducts.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// OrphanProducts is the basic handle type in this file. Example:
//    // Create a default OrphanProducts object:
//    OrphanProducts handle = OrphanProductsDefault();
// Functions involving OrphanProducts are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TEST_V2_0_TRANSPORT_ORPHANPRODUCTS
#define C_INTERFACE_TEST_V2_0_TRANSPORT_ORPHANPRODUCTS

#include "GNDStk.h"
#include "v2.0/transport/OrphanProduct.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct OrphanProductsClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ OrphanProducts
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct OrphanProductsClass *OrphanProducts;

// --- Const-aware handles.
typedef const struct OrphanProductsClass *const ConstHandle2ConstOrphanProducts;
typedef       struct OrphanProductsClass *const ConstHandle2OrphanProducts;
typedef const struct OrphanProductsClass *      Handle2ConstOrphanProducts;
typedef       struct OrphanProductsClass *      Handle2OrphanProducts;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstOrphanProducts
OrphanProductsDefaultConst();

// +++ Create, default
extern_c Handle2OrphanProducts
OrphanProductsDefault();

// --- Create, general, const
extern_c Handle2ConstOrphanProducts
OrphanProductsCreateConst(
   ConstHandle2OrphanProduct *const orphanProduct, const size_t orphanProductSize
);

// +++ Create, general
extern_c Handle2OrphanProducts
OrphanProductsCreate(
   ConstHandle2OrphanProduct *const orphanProduct, const size_t orphanProductSize
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
OrphanProductsAssign(ConstHandle2OrphanProducts This, ConstHandle2ConstOrphanProducts from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
OrphanProductsDelete(ConstHandle2ConstOrphanProducts This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
OrphanProductsRead(ConstHandle2OrphanProducts This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
OrphanProductsWrite(ConstHandle2ConstOrphanProducts This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
OrphanProductsPrint(ConstHandle2ConstOrphanProducts This);

// +++ Print to standard output, as XML
extern_c int
OrphanProductsPrintXML(ConstHandle2ConstOrphanProducts This);

// +++ Print to standard output, as JSON
extern_c int
OrphanProductsPrintJSON(ConstHandle2ConstOrphanProducts This);


// -----------------------------------------------------------------------------
// Child: orphanProduct
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
OrphanProductsOrphanProductHas(ConstHandle2ConstOrphanProducts This);

// +++ Clear
extern_c void
OrphanProductsOrphanProductClear(ConstHandle2OrphanProducts This);

// +++ Size
extern_c size_t
OrphanProductsOrphanProductSize(ConstHandle2ConstOrphanProducts This);

// +++ Add
extern_c void
OrphanProductsOrphanProductAdd(ConstHandle2OrphanProducts This, ConstHandle2ConstOrphanProduct orphanProduct);

// --- Get, by index \in [0,size), const
extern_c Handle2ConstOrphanProduct
OrphanProductsOrphanProductGetConst(ConstHandle2ConstOrphanProducts This, const size_t index_);

// +++ Get, by index \in [0,size), non-const
extern_c Handle2OrphanProduct
OrphanProductsOrphanProductGet(ConstHandle2OrphanProducts This, const size_t index_);

// +++ Set, by index \in [0,size)
extern_c void
OrphanProductsOrphanProductSet(
   ConstHandle2OrphanProducts This,
   const size_t index_,
   ConstHandle2ConstOrphanProduct orphanProduct
);

// +++ Has, by ENDF_MT
extern_c int
OrphanProductsOrphanProductHasByENDFMT(
   ConstHandle2ConstOrphanProducts This,
   const Integer32 ENDF_MT
);

// --- Get, by ENDF_MT, const
extern_c Handle2ConstOrphanProduct
OrphanProductsOrphanProductGetByENDFMTConst(
   ConstHandle2ConstOrphanProducts This,
   const Integer32 ENDF_MT
);

// +++ Get, by ENDF_MT, non-const
extern_c Handle2OrphanProduct
OrphanProductsOrphanProductGetByENDFMT(
   ConstHandle2OrphanProducts This,
   const Integer32 ENDF_MT
);

// +++ Set, by ENDF_MT
extern_c void
OrphanProductsOrphanProductSetByENDFMT(
   ConstHandle2OrphanProducts This,
   const Integer32 ENDF_MT,
   ConstHandle2ConstOrphanProduct orphanProduct
);

// +++ Has, by label
extern_c int
OrphanProductsOrphanProductHasByLabel(
   ConstHandle2ConstOrphanProducts This,
   const XMLName label
);

// --- Get, by label, const
extern_c Handle2ConstOrphanProduct
OrphanProductsOrphanProductGetByLabelConst(
   ConstHandle2ConstOrphanProducts This,
   const XMLName label
);

// +++ Get, by label, non-const
extern_c Handle2OrphanProduct
OrphanProductsOrphanProductGetByLabel(
   ConstHandle2OrphanProducts This,
   const XMLName label
);

// +++ Set, by label
extern_c void
OrphanProductsOrphanProductSetByLabel(
   ConstHandle2OrphanProducts This,
   const XMLName label,
   ConstHandle2ConstOrphanProduct orphanProduct
);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif